--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "6.4.*",
-        "symfony/web-profiler-bundle": "6.4.*"
+        "symfony/web-profiler-bundle": "6.4.*",
+        "xdebug/xdebug": "^3.3"
     }
 }
