--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,6 +12,8 @@ framework:
         handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
+
 
     #esi: true
     #fragments: true
@@ -23,3 +25,7 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+when@dev:
+    framework:
+        http_cache: true
