--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,8 +37,9 @@ security:
     access_control:
 #        - { path: ^/tasks, roles: PUBLIC_ACCESS }
         - { path: ^/login, roles: PUBLIC_ACCESS }
-        - { path: ^/users/create, roles: PUBLIC_ACCESS }
         - { path: ^/users, roles: ROLE_ADMIN }
+        - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/logout, roles: [ROLE_USER, ROLE_ADMIN] }
 
 when@test:
     security:
