--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,6 +27,10 @@
         <include>
             <directory suffix=".php">src</directory>
         </include>
+        <exclude>
+            <directory>src/Entity</directory>
+            <directory>src/DataFixtures</directory>
+        </exclude>
     </coverage>
 
     <listeners>
