--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,11 +1,12 @@
-# see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     annotations: false
     http_method_override: false
     handle_all_throwables: true
-
+    symfony:
+        verbose_logging_in_production:
+            enabled: true
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
@@ -13,7 +14,6 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
-
 
     #esi: true
     #fragments: true
