--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,6 +12,7 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
+        name: acme_corp
 
     #esi: true
     #fragments: true
@@ -23,6 +24,7 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+            name: acme_corp
 when@dev:
     framework:
         http_cache: true
